--- a/index.html
+++ b/index.html
@@ -379,13 +379,16 @@
 					<ul class="social-links">
 						<li><a href="index.html#" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>
 						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>
 						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
 
                     <p class="copyright">
-                        © 2017 <a href="https://vk.com/revch">Max Sharing</a>
+                        © 2017 <a href="https://vk.com/revch" class="wow fadeInUp" data-wow-delay=".5s">Max Sharing</a>
+					</p><br>
+					
+					<p class="port">
+					    <a href="assets/images/Резюме.rtf" download class="" data-wow-delay=".5s">Резюме</a>
 					</p>
 
 				</div>
