Подправил ссылки на проекты

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             <img src="assets/images/alliance.PNG" alt="img01"/>
                             <figcaption>
                                 <h2>Alliance</h2>
-                                <p><a href="#" class="work-a" target="_blank">Посмотреть</a><br><a href="https://github.com/revcheg/Alliance" class="work-a" target="_blank">Посмотреть на GitHub</a></p>
+                                <p><a href="assets/templates/alliance/index.html" class="work-a" target="_blank">Посмотреть</a><br><a href="https://github.com/revcheg/Alliance" class="work-a" target="_blank">Посмотреть на GitHub</a></p>
                             </figcaption>			
                         </figure>
                     </div>
@@ -206,7 +206,7 @@
                             <img src="assets/images/barber.PNG" alt="img01"/>
                             <figcaption>
                                 <h2>Barber-<span>Shop</span></h2>
-                                <p><a href="#" class="work-a" target="_blank">Посмотреть</a><br><a href="https://github.com/revcheg/Barber-Shop" class="work-a" target="_blank">Посмотреть на GitHub</a></p>
+                                <p><a href="assets/templates/barber-shop/index.html" class="work-a" target="_blank">Посмотреть</a><br><a href="https://github.com/revcheg/Barber-Shop" class="work-a" target="_blank">Посмотреть на GitHub</a></p>
                             </figcaption>			
                         </figure>
                     </div>
