--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="home-overlay"></div>
 		<div class="intro">
 			<div class="start">Привет, меня зовут Max Sharing, и я</div>
-			<h1>Junior web-developer</h1>
+			<h1>Junior Front-end developer</h1>
 		</div>
 
         <a href="#services">
@@ -57,7 +57,7 @@
 
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#custom-collapse">
-						<span class="sr-only">Toggle navigation</span>
+						<span class="sr-only">Кнопка меню</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -126,7 +126,7 @@
                     <li>jQuery (в очереди на изучение, однако сомневаюсь в её актуальности)</li>
                 </ul><br>
                 <h3>И наконец о себе</h3>
-                <p>Занимаюсь этим около полу-года, но из-за разных жизненных обстоятельств не мог активно заниматься обучением. Эта сфера для меня безумно интересна, поэтому хочу развиваться здесь, пробовал себя в разных языках, нигде не прижился. В свободное время стараюсь подтянуть себя в верстке (практикуюсь) или учу JS. Время от времени занимаюсь английским. В целом теории в моей голове много, также много пройденно курсов и прочитанно книг, но вот реальной практики почти 0. Кому я это пишу?.. Будто веду блог.</p>
+                <p>Занимаюсь этим около полугода, но из-за разных жизненных обстоятельств не мог активно заниматься обучением. Эта сфера для меня безумно интересна, поэтому хочу развиваться здесь, пробовал себя в разных языках, нигде не прижился. В свободное время стараюсь подтянуть себя в верстке (практикуюсь) или учу JS. Время от времени занимаюсь английским. В целом теории в моей голове много, также много пройденно курсов и прочитанно книг, но вот реальной практики почти 0. Кому я это пишу?.. Будто веду блог.</p>
                 <p>*Сайт создан для практики знаний, и не более.</p>
 			</div><!-- .row -->
 		</div><!-- .container -->
