--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
                     <li>Использование методологии БЭМ</li>
                     <li>Верстка адаптивных сайтов</li>
                     <li>Кроссбраузерная верстка</li>
-                    <li>Микроданные (MicroData)</li>
+                    <li>MicroData</li>
                 </ul>
                             
                 <h3>Java-Script</h3>
                 <ul>
                     <li>Основы: функции, массивы, объекты</li>
                     <li>Понимание и работа с DOM-деревом</li>
+                    <li>jQuery</li>
                     <li>WebStorage, WebWorkers</li>
                     <li>Geolocation API</li>
                     <li>Offline App</li>
@@ -121,6 +122,7 @@
                 
                 <h3>Общее</h3>
                 <ul>
+                    <li>Базовые знания <b>MySql</b> и <b>PHP</b></li>
                     <li>Использование системы контроля версий (GitHub)</li>
                     <li>Оптимизация (PageSpeed Insights)</li>
                 </ul>
@@ -259,7 +261,7 @@
                                 <h2 class="pfblock-title">Уровень знаний</h2>
                                 <div class="pfblock-line"></div>
                                 <div class="pfblock-subtitle">
-                                    Здесь показан приблизительный уровень моей подготовки.
+                                    Здесь показан уровень моей подготовки.
                                 </div>
                             </div>
 
@@ -274,8 +276,8 @@
 						<h3 class="text-center">HTML - CSS</h3>
 					</div>
 					<div class="col-sm-6 col-md-3 text-center">
-						<span data-percent="30" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
-                            <span class="percent">30</span>
+						<span data-percent="45" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
+                            <span class="percent">45</span>
                         </span>
 						<h3 class="text-center">Java-script</h3>
 					</div>
