--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#custom-collapse">
-						<span class="sr-only">Кнопка меню</span>
+						<span class="sr-only"></span>
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
+        		<span class="icon-bar"></span>
+        		<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="index.html">Max Sharing</a>
 				</div>
