--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   	<div class="home-overlay"></div>
 		<div class="intro">
 			<div class="start">Привет, меня зовут Max Sharing, и я</div>
-			<h1>Front-end developer / HTML - верстальщик</h1>
+			<h1>Junior Front-end developer</h1>
 		</div>
       <a href="#services">
 				<div class="scroll-down">
