--- a/index.html
+++ b/index.html
@@ -72,25 +72,21 @@
 				<h3>HTML - CSS</h3>
 				<ul>
 					<li>HTML5 & CSS3</li>
-					<li>LESS</li>
+					<li>LESS, SASS</li>
+					<li>Adaptive markup</li>
+					<li>Cross-browser markup</li>
+					<li>BEM</li>
+					<li>Flexbox</li>
 					<li>Bootstrap</li>
-					<li>Google Fonts</li>
 					<li>Adobe Photoshop, Assets</li>
 					<li>Трансформация и анимация</li>
 					<li>Написание семантически верного кода</li>
-					<li>Использование методологии БЭМ</li>
-					<li>Верстка адаптивных сайтов</li>
-					<li>Кроссбраузерная верстка</li>
-					<li>MicroData</li>
 				</ul>
 				<h3>Java-Script</h3>
 					<ul>
 					<li>Основы: функции, массивы, объекты</li>
 					<li>Понимание и работа с DOM-деревом</li>
 					<li>jQuery</li>
-					<li>WebStorage, WebWorkers</li>
-					<li>Geolocation API</li>
-					<li>Offline App</li>
 					<li>Gulp</li>
 				</ul>
 				<h3>Общее</h3>
@@ -114,6 +110,19 @@
 						<div class="pfblock-subtitle">
 							Все работы очень разные, использованы разные технологии и подход.
 						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="grid wow zoomIn">
+						<figure class="effect-bubba">
+							<img src="assets/images/crypto.PNG" alt=""/>
+							<figcaption>
+								<h2>Cryptologi</h2>
+								<p><a href="http://cryptologi.com/" class="work-a" target="_blank">Посмотреть</a></p>
+							</figcaption>			
+						</figure>
 					</div>
 				</div>
 			</div>
