--- a/index.html
+++ b/index.html
@@ -125,6 +125,18 @@
 						</figure>
 					</div>
 				</div>
+				
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="grid wow zoomIn">
+						<figure class="effect-bubba">
+							<img src="assets/images/plus.PNG" alt=""/>
+							<figcaption>
+								<h2>Plus500Crypto</h2>
+								<p><a href="assets/templates/crypto-b/index.html" class="work-a" target="_blank">Посмотреть</a></p>
+							</figcaption>			
+						</figure>
+					</div>
+				</div>
 			</div>
       <div class="row">
 				<div class="col-xs-12 col-sm-4 col-md-4">
