--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
 						</figure>
 					</div>
 				</div>
+				
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="grid wow zoomIn">
+						<figure class="effect-bubba">
+							<img src="assets/images/miner.PNG" alt=""/>
+							<figcaption>
+								<h2>MiningHub</h2>
+								<p><a href="assets/templates/miner/index.html" class="work-a" target="_blank">Посмотреть</a></p>
+							</figcaption>			
+						</figure>
+					</div>
+				</div>
 			</div>
       <div class="row">
 				<div class="col-xs-12 col-sm-4 col-md-4">
