--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 							<img src="assets/images/plus.PNG" alt=""/>
 							<figcaption>
 								<h2>Plus500Crypto</h2>
-								<p><a href="assets/templates/crypto-b/index.html" class="work-a" target="_blank">Посмотреть</a></p>
+								<p><a href="http://www.plus500crypto.com/" class="work-a" target="_blank">Посмотреть</a></p>
 							</figcaption>			
 						</figure>
 					</div>
@@ -144,7 +144,7 @@
 							<img src="assets/images/miner.PNG" alt=""/>
 							<figcaption>
 								<h2>MiningHub</h2>
-								<p><a href="assets/templates/miner/index.html" class="work-a" target="_blank">Посмотреть</a></p>
+								<p><a href="http://mainingcrypto.com/" class="work-a" target="_blank">Посмотреть</a></p>
 							</figcaption>			
 						</figure>
 					</div>
