--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
 					<div class="pfblock-header wow fadeInUp">
 						<h2 class="pfblock-title">Немного информации</h2>
 						<div class="pfblock-line"></div>
-						<div class="pfblock-subtitle">
-							О том, что я умею, знаю и к чему стремлюсь.
-						</div>
+						<div class="pfblock-subtitle">asdasd</div>
 					</div>
 				</div>
 			</div>
@@ -78,7 +76,7 @@
 					<li>BEM</li>
 					<li>Flexbox</li>
 					<li>Bootstrap</li>
-					<li>Adobe Photoshop, Assets</li>
+					<li>Adobe Photoshop</li>
 					<li>Трансформация и анимация</li>
 					<li>Написание семантически верного кода</li>
 				</ul>
@@ -107,9 +105,7 @@
 					<div class="pfblock-header wow fadeInUp">
 						<h2 class="pfblock-title">Мои работы</h2>
 						<div class="pfblock-line"></div>
-						<div class="pfblock-subtitle">
-							Все работы очень разные, использованы разные технологии и подход.
-						</div>
+						<div class="pfblock-subtitle"></div>
 					</div>
 				</div>
 			</div>
@@ -355,7 +351,7 @@
             © 2017 <a href="https://vk.com/revch" target="_blank" class="wow fadeInUp" data-wow-delay=".5s">Max Sharing</a>
 					</p><br>
 					<p class="brief">
-						<a href="images/Резюме.rtf" download>Резюме</a>
+						<a href="assets/images/Резюме.rtf" download>Резюме</a>
 					</p>
 				</div>
 			</div>
@@ -368,16 +364,16 @@
 	</div>
   <!-- Конец скролла -->
 	<!-- JS -->    
-	<script src="js/jquery-1.11.1.min.js"></script>
-	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<script src="js/jquery.parallax-1.1.3.js"></script>
-	<script src="js/imagesloaded.pkgd.js"></script>
-	<script src="js/jquery.sticky.js"></script>
-	<script src="js/smoothscroll.js"></script>
-	<script src="js/wow.min.js"></script>
-  <script src="js/jquery.easypiechart.js"></script>
-  <script src="js/waypoints.min.js"></script>
-  <script src="js/jquery.cbpQTRotator.js"></script>
-	<script src="js/custom.js"></script>  
+	<script src="assets/js/jquery-1.11.1.min.js"></script>
+	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+	<script src="assets/js/jquery.parallax-1.1.3.js"></script>
+	<script src="assets/js/imagesloaded.pkgd.js"></script>
+	<script src="assets/js/jquery.sticky.js"></script>
+	<script src="assets/js/smoothscroll.js"></script>
+	<script src="assets/js/wow.min.js"></script>
+  <script src="assets/js/jquery.easypiechart.js"></script>
+  <script src="assets/js/waypoints.min.js"></script>
+  <script src="assets/js/jquery.cbpQTRotator.js"></script>
+	<script src="assets/js/custom.js"></script>  
 </body>
 </html>
