global change text

--- a/crypto-b/index.html
+++ b/crypto-b/index.html
@@ -20,21 +20,21 @@
           <div class="page-header__flex">
             <div class="page-header__logo">
               <a>
-                <img class="page-header__logo" src="img/logo.png" alt="plus500crypto" width="300">
-                <!-- <img class="page-header__logo-s" src="img/logo-s.png" alt="plus500crypto"> -->
+                <img class="page-header__logo" src="img/logo.png" alt="+500crypto" width="300">
+                <!-- <img class="page-header__logo-s" src="img/logo-s.png" alt="+500crypto"> -->
               </a>
             </div>
             <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/login">Login</a></li>
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/login">Login</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/register/real/">Sign Up</a></li>
                 <li class="page-header__item"><a href="templates/contact.html">Contacts</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/login">Login</a></li>
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/login">Login</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/register/real/">Sign Up</a></li>
                 <li class="page-header__item"><a href="templates/contact.html">Contacts</a></li>
               </ul>
             </div>
@@ -174,7 +174,7 @@
       <div class="crypto__flex">
         <h1>A cryptobank for everyone</h1>
         <p>In 8 years’ time, the crypto-economy will exceed 1 trillion dollars. Cryptobanks will become a cornerstone in the relations between decentralized economy and future daily</p>
-        <a href="https://client.plus500crypto.com/en/members/register/real/">Create Account</a>
+        <a href="https://client.+500crypto.com/en/members/register/real/">Create Account</a>
       </div>
     </div>
   </section>
@@ -208,8 +208,8 @@
         <div class="page-footer__column">
           <b>Account</b>
           <ul>
-            <li><a href="https://client.plus500crypto.com/en/members/login">Sign In</a></li>
-            <li><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
+            <li><a href="https://client.+500crypto.com/en/members/login">Sign In</a></li>
+            <li><a href="https://client.+500crypto.com/en/members/register/real/">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
@@ -233,8 +233,7 @@
           </ul>
         </div>
       </div>
-      <p class="page-footer__copyright">© Copyright 2017 +500crypto, All right reserved. +500crypto is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, 2027 Nicosia, Cyprus<br><br>+500crypto is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange.
-Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>
+      <p class="page-footer__copyright">© Copyright 2017 +500crypto, All right reserved. +500crypto is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, 2027 Nicosia, Cyprus<br><br>+500crypto is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange. Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>
     </div>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js"></script>
