--- a/crypto-b/index.html
+++ b/crypto-b/index.html
@@ -7,8 +7,7 @@
   <title>+500crypto</title>
   <link rel="stylesheet" href="css/style.min.css">
   <!-- API -->
-	<link rel="stylesheet" href="api/style.css"></link>
-  
+	<link rel="stylesheet" href="api/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
@@ -20,8 +19,7 @@
           <div class="page-header__flex">
             <div class="page-header__logo">
               <a>
-                <img class="page-header__logo" src="img/logo.png" alt="+500crypto" width="300">
-                <!-- <img class="page-header__logo-s" src="img/logo-s.png" alt="+500crypto"> -->
+                <img class="page-header__logo" src="img/logo.png" alt="+500crypto">  
               </a>
             </div>
             <div class="page-header__main-nav">
@@ -43,13 +41,11 @@
       </nav>
     </div>
     <div class="container">
-      <!-- <div class="row"> -->
       <div class="panel__flex">
         <div class="price-boxes">
   				<div class="panel-group">
   					<div class="panel panel-default">
   						<div class="panel-body">
-  							<!-- <h6><a href="https://www.cryptocompare.com">Source: CryptoCompare.com</a></h6> -->
   							<h2 class="price-display">BTCUSD <span class="price" id="PRICE_BTC"></span></h2>
   							<h5>24h Change: <span id="CHANGE24HOUR_BTC"></span><span id="CHANGE24HOURPCT_BTC"></span><br></h5>
   							<h5>Last Market: <span class="exchange" id="LASTMARKET_BTC"></span> <br></h5>
@@ -72,7 +68,6 @@
   				<div class="panel-group">
   					<div class="panel panel-default">
   						<div class="panel-body">
-  							<!-- <h6><a href="https://www.cryptocompare.com">Source: CryptoCompare.com</a></h6> -->
   							<h2 class="price-display">ETHUSD <span class="price" id="PRICE_ETH"></span></h2>
   							<h5>24h Change: <span id="CHANGE24HOUR_ETH"></span><span id="CHANGE24HOURPCT_ETH"></span><br></h5>
   							<h5>Last Market: <span class="exchange" id="LASTMARKET_ETH"></span> <br></h5>
@@ -95,7 +90,6 @@
   				<div class="panel-group">
   					<div class="panel panel-default">
   						<div class="panel-body">
-  							<!-- <h6><a href="https://www.cryptocompare.com">Source: CryptoCompare.com</a></h6> -->
   							<h2 class="price-display">LTCUSD <span class="price" id="PRICE_LTC"></span></h2>
   							<h5>24h Change: <span id="CHANGE24HOUR_BTC"></span><span id="CHANGE24HOURPCT_LTC"></span><br></h5>
   							<h5>Last Market: <span class="exchange" id="LASTMARKET_LTC"></span> <br></h5>
@@ -115,7 +109,6 @@
           <a class="panel__link  panel__link--ltc" href="">TRADE NOW</a>
   			</div>
       </div>
-		<!-- </div> -->
     </div>
   </header>
   <section class="trade">
@@ -160,7 +153,7 @@
         </div>
         <div class="news__middle-column">
           <b>A NEW TYPE OF INVESTMENT</b>
-          <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of cryptologic. +500crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots.</p>
+          <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of +500crypto. +500crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots.</p>
         </div>
         <div class="news__right-column">
           <b>FRIENDLY INTERFACE</b>
@@ -201,7 +194,6 @@
       </div>
     </div>
   </section>
-  <!-- <section class="coin"></section> -->
   <footer class="page-footer">
     <div class="container">
       <div class="page-footer__flex">
@@ -229,11 +221,12 @@
             <li><a href="templates/privacy.html">Legal & Privacy</a></li>
             <li><a href="templates/terms.html">Terms & Conditions</a></li>
             <li><a href="templates/support.html">Support</a></li>
-            <!-- <li><a href="templates/trading.html">Trading Guide</a></li> -->
           </ul>
         </div>
       </div>
-      <p class="page-footer__copyright">© Copyright 2017 +500crypto, All right reserved. +500crypto is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, 2027 Nicosia, Cyprus<br><br>+500crypto is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange. Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>
+      <p class="page-footer__copyright">
+        © Copyright 2017 +500crypto, All right reserved. +500crypto is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, 2027 Nicosia, Cyprus<br><br>+500crypto is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange. Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.
+      </p>
     </div>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js"></script>
